--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,13 @@
-# Prerequisites
-*.d
+
+.vscode
+.idea
 
 # Object files
 *.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
 
 # Libraries
 *.lib
 *.a
-*.la
-*.lo
 
 # Shared objects (inc. Windows DLLs)
 *.dll
@@ -37,10 +24,7 @@
 *.hex
 
 # Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+vgcore.*
 
 # Kernel Module Compile Results
 *.mod*
